# richards-nitsche-signorini

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
data/: test1_clay_baseline.npz  test2_splitting_temporal.npz  test2a_convergence_spatial.npz  test2b_convergence_temporal.npz  test3a_mono_vs_split.npz  test3b_splitting_5m.npz  test3c_front_speed.npz  test4_rain_switching.npz
formalization/: .gitignore  RichardsNitscheSignorini.lean  lake-manifest.json  lakefile.toml
formalization/RichardsNitscheSignorini/: Main.lean
formalization/RichardsNitscheSignorini/Foundations/: ConstitutiveModel.lean  Filters.lean
formalization/graphs/: proof_chain.dot
formalization/scripts/: generate_proof_graph.py
notebooks/: 01_clay_baseline.ipynb  02_convergence_study.ipynb  03_sand_splitting.ipynb  04_signorini_switching.ipynb  05_failed_approaches.ipynb
scripts/: README.md  _diag_cauchy.py  _style.py  fig_test1_clay_baseline.py  fig_test2_splitting_temporal.py  fig_test2a_convergence_spatial.py  fig_test2b_convergence_temporal.py  fig_test3a_mono_vs_split.py  fig_test3b_splitting_5m.py  fig_test3c_front_speed.py  fig_test4_rain_switching.py
src/nitsche_signorini/: __init__.py  common.py  constitutive.py  materials.py  runners.py  splitting.py
